加上 redis 設定測試
1. 測試 redis 當做中介，所有資料透過 redis 來傳輸
2. 測試 logspout-redis
3. 自己製作 logspout-redis

--- a/config/logstash/config.d/redis.conf
+++ b/config/logstash/config.d/redis.conf
@@ -1,6 +1,6 @@
 input {
   redis {
-    host => "redis"
+    host => "172.17.8.200"
     port => "6379"
     data_type => "list"
     key => "logstash"
@@ -9,7 +9,7 @@ input {
 
 output {
   elasticsearch {
-    hosts => ["elasticsearch:9200"]
+    hosts => ["127.0.0.1:9200"]
     index => "logstash-%{+YYYY.MM.dd}"
   }
   stdout { codec => rubydebug }
