--- a/config/kibana/kibana.yml
+++ b/config/kibana/kibana.yml
@@ -3,7 +3,7 @@ server.port: 5601
 # The host to bind the server to.
 server.host: "0.0.0.0"
 # The Elasticsearch instance to use for all your queries.
-elasticsearch.url: 'http://localhost:9200'
+elasticsearch.url: 'http://elasticsearch:9200'
 # preserve_elasticsearch_host true will send the hostname specified in `elasticsearch`. If you set it to false,
 # then the host you use to connect to *this* Kibana instance will be sent.
 # elasticsearch.preserveHost: true
