--- a/config/logstash/config/logstash.conf
+++ b/config/logstash/config/logstash.conf
@@ -6,11 +6,14 @@ input {
     key => "logstash"
   }
 }
-
+filter {
+  grok {
+    match => { "message" => "%{NGINXACCESS}" }
+  }
+}
 output {
   elasticsearch {
     hosts => ["elasticsearch:9200"]
     index => "logstash-%{+YYYY.MM.dd}"
   }
-  stdout { codec => rubydebug }
 }
