修改 indexer config
原本要使用另外一個 logstash 來做 filter
不過因為協定關係，目前沒有試成功
現在先改採 indexer 的設定檔，做成多個
根據 input, filter, output 不同的樣子分成不同的 conf
之後再考慮增加設定的作法

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,19 +26,43 @@ redis:
   ports:
     - 6379:6379
 
-logstash-indexer:
+indexer:
   restart: on-failure
   image: logstash
-  command: logstash agent -f /config/logstash.conf
+  command: -f /etc/logstash/conf.d
   volumes:
-    - ${PWD}/config/logstash/config:/config
+    - ${PWD}/config/logstash/config:/etc/logstash/conf.d
   environment:
     - LOGSPOUT=ignore
   links:
     - redis
     - elasticsearch
 
-logstash-collector:
+# filter:
+#   image: logstash
+#   command: logstash agent -f /config/logstash.conf
+#   ports:
+#     - 5000:5000
+#   volumes:
+#     - ${PWD}/config/logstash/filter-config:/config
+#   environment:
+#     - LOGSPOUT=ignore
+#   links:
+#     - redis
+
+# collector:
+#   image: gliderlabs/logspout
+#   command: syslog+tcp://filter:5000
+#   ports:
+#     - 8000:8000
+#   environment:
+#     - LOGSPOUT=ignore
+#   volumes:
+#     - /var/run/docker.sock:/tmp/docker.sock
+#   links:
+#     - filter
+
+collector:
   restart: on-failure
   image: logstash-collector
   command: redis://redis?key=logstash
