modify nginx conf, for parse date error, still not fix

--- a/logstash-config/src/etc/logstash/conf.d/90-output-elasticsearch.conf
+++ b/logstash-config/src/etc/logstash/conf.d/90-output-elasticsearch.conf
@@ -1,6 +1,9 @@
 output {
   elasticsearch {
     hosts => ["elasticsearch:9200"]
-    index => "logstash-%{+YYYY.MM.dd}"
+    sniffing => true
+    manage_template => false
+    index => "%{[@metadata][beat]}-%{+YYYY.MM.dd}"
+    document_type => "%{[@metadata][type]}"
   }
 }
